@@ -8,6 +8,8 @@ Changes after KWord-1.4 (in the branch)
    Save office:font-face-decls tag so that OOo loads the fonts
    Fixed loading of font sizes specified as a percentage
    Implemented loading of list indentation (space-before) (#109223)
+   Improved OOo compatibility when saving page breaks
+   Save first page number the right way so that OOo can load it
 
 Changes after KWord-1.4-beta1
 =============================
